with clothes version 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <H1>  Hi its a nice morning i guesssssss </H1>
+
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
@@ -11,6 +12,11 @@
   <body>
     <main>
     </main>
-    <script src="sketch.js"></script>
+    <img src="clothes (1).png" alt="Smiley face" width="42" height="42" style="border:5px solid black">
+
+
+
+
+
   </body>
 </html>
