--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<H1>  Hi its a nice morning i guesssssss </H1>
+<H1>  Book Sketch Note </H1>
 
 <html lang="en">
   <head>
@@ -12,9 +12,12 @@
   <body>
     <main>
     </main>
-    <img src="clothes (1).png" alt="Smiley face" width="595" height="842" style="border:5px solid black">
 
+    <H1>  Book Sketch Note </H1>
+    <img src="A4 - 2 (1).png" alt="Smiley face" align-center width="595" height="842" style="border:5px solid black">
 
+    <H1>  Clothes Vizualization</H1>
+    <img src="clothes (1).png" alt="Smiley face" align-center width="595" height="842" style="border:5px solid black">
 
 
 
