--- a/index.html
+++ b/index.html
@@ -1,25 +1,86 @@
 <!DOCTYPE html>
-
-
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Data Vis</title>
   </head>
+
+  <style>
+    html,
+    body {
+      margin: 20px;
+      padding: 0;
+    }
+
+    section {
+      margin-top: 100px;
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    .category {
+      text-transform: uppercase;
+      font-size: 1.2rem;
+    }
+
+    .flex {
+      max-width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    .flex img {
+      width: 200px;
+    }
+  </style>
   <body>
+    <h1>Data Visualisation</h1>
     <main>
+      <section>
+        <h2>Book SketchNote</h2>
+        <img class="main" src="booksketch.jpg" />
+      </section>
+      <section>
+        <p class="category">Clothes</p>
+        <h2>Title of your Clothes Piece</h2>
+        <img class="main" src="clothers.png" />
+        <p>Process & Experiments</p>
+        <div class="flex">
+          <img src="clothes-1.png" />
+          <img src="clothes-2.png" />
+          <img src="clothes-1.png" />
+        </div>
+      </section>
+
+      <h2>Learning Resources</h2>
+      <ul>
+        <li>
+          <a
+            href="https://www.figma.com/file/nB0xkQovSLnQd84jZeO3Vb/Summary?t=K0isU4baM58HGVpM-1"
+          >
+            Figma Summary Canvas
+          </a>
+        </li>
+        <li>
+          <a href="https://amitkaps.com/data-visualisation-resources"
+            >Master Resource List</a
+          >
+        </li>
+        <li>
+          <a href="https://amitkaps.com/guidelines">Project Guidelines</a>
+        </li>
+        <li>
+          <a
+            href="https://docs.google.com/spreadsheets/d/1BB-SMg-cXHpBWn6kRCvTsxBp-z5V45LJls9GE9ZZPbk/edit?usp=sharing"
+            >Sheets Link</a
+          >
+        </li>
+      </ul>
     </main>
-
-    <H1>  Book Sketch Note </H1>
-    <img src="A4 - 2 (1).png" alt="Smiley face" class="center"  width="842" height="595"style="border:5px solid black">
-
-    <H1>  Clothes Vizualization</H1>
-    <img src="clothes (1).png" alt="Smiley face" class="center" width="595" height="842" style="border:5px solid black">
-
-
-
   </body>
 </html>
