--- a/index.html
+++ b/index.html
@@ -39,8 +39,18 @@
     }
   </style>
   <body>
-    <h1>Data Visualisation</h1>
-    <h2>By Utkarsh Singh</h2>
+    
+    <div style="display: flex;">
+      <div style="flex: 1; background-color: #030303; padding: 0px;">
+        <img src="utkarsh.jpg" />
+      </div>
+      <div style="flex: 1; background-color: #030303; padding: 0px;">
+        <h1>Hi! I am Utkarsh Singh</h1>
+        <h2>An Information Designer</h2>
+    
+        <h1>Explore my Data Visualisation work on my portfolio (Updated)</h2>
+      </div>
+    </div>
     <main>
       <section>
         <p class="category">Book Sketchnote</p>
