--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     html,
     body {
-      margin: 20px;
+      margin: 0px;
       padding: 0;
     }
 
@@ -45,7 +45,7 @@
         <img src="utkarsh.jpg" />
       </div>
       <div style="flex: 1; background-color: #030303; padding: 0px;">
-        <h1>Hi! I am Utkarsh Singh</h1>
+        <h1 color: blue;>Hi! I am Utkarsh Singh</h1>
         <h2>An Information Designer</h2>
     
         <h1>Explore my Data Visualisation work on my portfolio (Updated)</h2>
