--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     body {
       margin: 0px;
       padding: 0;
+      textcolo
     }
 
     section {
@@ -42,7 +43,13 @@
     
     <div style="display: flex;">
       <div style="flex: 1; background-color: #030303; padding: 0px;">
-        <img src="utkarsh.jpg" />
+        p {
+          margin-top: 100px;
+          margin-bottom: 100px;
+          margin-right: 100px;
+          margin-left: 100px;
+        }
+        <img src="utkarsh.jpg"  padding: 0; />
       </div>
       <div style="flex: 1; background-color: #030303; padding: 0px;">
         <h1 color: blue;>Hi! I am Utkarsh Singh</h1>
