--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
   </style>
   <body>
     
+    <section>
+
+    </section>
+
+
     <div style="display: flex;">
       <div style="flex: 1; background-color: #030303; padding: 0px;">
-        p {
-          margin-top: 100px;
-          margin-bottom: 100px;
-          margin-right: 100px;
-          margin-left: 100px;
-        }
+        
         <img src="utkarsh.jpg"  padding: 0; />
       </div>
       <div style="flex: 1; background-color: #030303; padding: 0px;">
@@ -69,39 +69,52 @@
       </section>
       <section>
         <p class="category">Clothes</p>
-        <h2>Is my wardrobe contributing to the heap of waste in landfills ?</h2>
-        <img class="main" src="clothes final.png" />
-        <p>Process & Experiments</p>
+        <h2>The Afterlife of My Clothes</h2>
+        <img class="main" src="clothes d.png" />
+        <h3>Process & Experiments</h3>
         <div class="flex">
-          <img src="clothes 1.png" />
-          <img src="clothes 2.png" />
-          <img src="clothes 3.png" />
+          <img src="Clothes a.png" />
+          <img src="Clothes b.png" />
+          <img src="clothes c.png" />
         </div>
       </section>
 
 
       <section>
         <p class="category">Movies</p>
-        <h2>Primary Filming Locations for Thriller Movies</h2>
-        <img class="main" src="movies final.png" />
-        <p>Process & Experiments</p>
+        <h2>Are Thriller movies mostly shot Indoor?</h2>
+        <img class="main" src="movies d.png" />
+        <h3>Process & Experiments</h3>
         <div class="flex">
-          <img src="movies 1.png" />
-          <img src="movies (2).png" />
-          <img src="movies (3).png" />
+          <img src="movies a.png" />
+          <img src="movies b.png" />
+          <img src="movies c.png" />
         </div>
       </section>
 
 
       <section>
         <p class="category">Relationship</p>
-        <h2>My Relationship with the Fonts i use the most</h2>
-        <img class="main" src="relationship.png" />
+        <h2>Common Attributes between Fonts that i use the most</h2>
+        <img class="main" src="relationship d.png" />
         <p>Process & Experiments</p>
         <div class="flex">
-          <img src="relationship 1.png" />
-          <img src="relationship 2.png" />
-          <img src="relationship 3.png" />
+          <img src="relationship a.png" />
+          <img src="relationship b.png" />
+          <img src="relationship c.png" />
+        </div>
+      </section>
+
+
+      <section>
+        <p class="category">Travel</p>
+        <h2>Evolution of My Travel Purpose</h2>
+        <img class="main" src="Travel d.png" />
+        <p>Process & Experiments</p>
+        <div class="flex">
+          <img src="Travel b.png" />
+          <img src="Travel c.png" />
+          <img src="Travel a.png" />
         </div>
       </section>
 
