--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       padding: 100;
       background-color: #f2f2f2;
       color: white;
+      font-family: Helvetica , sans-serif;
     }
 
     section {
