--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 100px;
       padding: 100;
-      background-color: #f2f2f2;
+      background-color: #000000;
       color: white;
       font-family: Helvetica , sans-serif;
     }
