--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
       </div>     
 
       <div style="flex: 1; background-color: #030303; padding: 30px;">
-        <h1 color: blue;>Hi ! I am Utkarsh Singh</h1>
+        <h1>Hi ! I am Utkarsh Singh</h1>
         <h2>An Information Designer</h2>
-        <p> </p>
-        <p> </p>
-        <p> </p>
+        <section>
+
+        </section>
         <h1>Explore my Data Visualisation work on my portfolio (Updated)</h2>
       </div>
     </div>
