--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <style>
     html,
     body {
-      margin:  50px;
-      padding: 50;
+      margin:  100px;
+      padding: 100px;
       background-color: #000000;
       color: white;
       font-family: Helvetica , sans-serif;
