--- a/index.html
+++ b/index.html
@@ -38,14 +38,6 @@
     .flex img {
       width: 330px;
     }
-
-    .face {
-      max-width: 50%;
-      display: face;
-      padding: 50 px;
-      justify-content: space-around;
-    }
-
   </style>
   <body>
     
@@ -54,18 +46,17 @@
     </section>
 
 
-    <div style="display: face; ">
+    <div style="display: flex;">
       <div style="flex: 1; background-color: #030303; padding: 30px;">
         
-        <img src="utkarsh.jpg" />
+        <img src="utkarsh.jpg"  padding: 50px; />
       </div>     
 
       <div style="flex: 1; background-color: #030303; padding: 30px;">
         <h1>Hi ! I am Utkarsh Singh</h1>
         <h2>An Information Designer</h2>
         <section>
-          <h1></h1>
-          <h2></h2>
+
         </section>
         <h1>Explore my Data Visualisation work on my portfolio (Updated)</h2>
       </div>
