--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div style="display: flex;">
       <div style="flex: 1; background-color: #030303; padding: 30px;">
         
-        <img src="utkarsh.jpg"  padding: 50px; />
+        <img src="utkarsh.jpg"  style="border-radius: 10%;" />
       </div>     
 
       <div style="flex: 1; background-color: #030303; padding: 30px;">
