--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <main>
-      <section>
+      <section style="margin-bottom: 100px>
         <p class="category">Book Sketchnote</p>
         <h2>Book Name - Interactive Data Visualization</h2>
         <h3>Authors - 	Matthew O. Ward, Georges Grinstein, Daniel Keim</h2>
