--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .flex {
-      max-width: 500%;
+      max-width: 430%;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -36,7 +36,7 @@
     }
 
     .flex img {
-      width: 500px;
+      width: 430px;
     }
   </style>
   <body>
@@ -53,16 +53,16 @@
       </div>     
 
       <div style="flex: 1; background-color: #030303; padding: 30px;">
-        <h1>Hi ! I am Utkarsh Singh</h1>
+        <h1>Hi !    I am Utkarsh Singh</h1>
         <h2 style="margin-bottom: 100px"> An Information Designer</h2>
         <section>
 
         </section>
-        <h1>Explore my Data Visualisation work on my portfolio (Updated)</h2>
+        <h1>Scroll down to discover my data visualization works  !</h2>
       </div>
     </div>
     <main>
-      <section style="margin-bottom: 100px>
+      <section style="margin-top: 200px;" >
         <p class="category">Book Sketchnote</p>
         <h2>Book Name - Interactive Data Visualization</h2>
         <h3>Authors - 	Matthew O. Ward, Georges Grinstein, Daniel Keim</h2>
@@ -70,7 +70,7 @@
        
         <img class="main" src="sketchnote.png" />
       </section>
-      <section>
+      <section style="margin-top: 200px;">
         <p class="category">Clothes</p>
         <h2>The Afterlife of My Clothes</h2>
         <img class="main" src="clothes d.png" />
@@ -83,7 +83,7 @@
       </section>
 
 
-      <section>
+      <section style="margin-top: 200px;">
         <p class="category">Movies</p>
         <h2>Are Thriller movies mostly shot Indoor?</h2>
         <img class="main" src="movies d.png" />
@@ -96,7 +96,7 @@
       </section>
 
 
-      <section>
+      <section style="margin-top: 200px;">
         <p class="category">Relationship</p>
         <h2>Common Attributes between Fonts that i use the most</h2>
         <img class="main" src="relationship d.png" />
@@ -109,7 +109,7 @@
       </section>
 
 
-      <section>
+      <section style="margin-top: 200px;">
         <p class="category">Travel</p>
         <h2>Evolution of My Travel Purpose</h2>
         <img class="main" src="Travel d.png" />
