--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section>
 
         </section>
-        <h1>Scroll down to discover my data visualization works  !</h2>
+        <h1>Scroll down to discover my data visualization works (updated) !</h2>
       </div>
     </div>
     <main>
