--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div style="flex: 1; background-color: #030303; padding: 30px;">
         <h1>Hi !</h1>
-        <h1>I am Utkarsh Singh</h1>
+        <h1 style="margin-bottom: 30px">I am Utkarsh Singh</h1>
         <h2 style="margin-bottom: 100px"> An Information Designer</h2>
         <section>
 
